oblig2patch/src/tests/oblig2/errors/type3_fail.cmp
program type3_fail
begin

    proc main()
    begin
       var tmp : int
    in
       tmp := 21 + 21.0 /* error, expression is float */
    end

end